--- a/src/main/resources/nielson/c195projectmkn/loginform.fxml
+++ b/src/main/resources/nielson/c195projectmkn/loginform.fxml
@@ -4,37 +4,36 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" prefHeight="250.0" prefWidth="300.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nielson.c195projectmkn.Controllers.LogInForm">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-   <children>
-      <Pane prefHeight="200.0" prefWidth="200.0">
-         <VBox layoutX="14.0" prefHeight="200.0" prefWidth="100.0">
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="10.0" prefWidth="100.0" text="Username:"
-                   textAlignment="CENTER">
-               <VBox.margin>
-                  <Insets top="100.0"/>
-               </VBox.margin>
-            </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="100.0" text="Password:"
-                   textAlignment="CENTER"/>
-         </VBox>
-         <VBox layoutX="98.0" layoutY="1.0" prefHeight="200.0" prefWidth="100.0">
-            <TextField>
-               <opaqueInsets>
-                  <Insets/>
-               </opaqueInsets>
-               <VBox.margin>
-                  <Insets top="95.0"/>
-               </VBox.margin>
-            </TextField>
-            <PasswordField>
-               <VBox.margin>
-                  <Insets top="10.0"/>
-               </VBox.margin>
-            </PasswordField>
-         </VBox>
-      </Pane>
-   </children>
+<VBox alignment="CENTER" prefHeight="250.0" prefWidth="300.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="nielson.c195projectmkn.Controllers.LogInFormController">
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+   </padding>
+   <Pane prefHeight="200.0" prefWidth="200.0">
+      <VBox layoutX="14.0" prefHeight="200.0" prefWidth="100.0">
+         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="10.0" prefWidth="100.0" text="Username:"
+                textAlignment="CENTER">
+            <VBox.margin>
+               <Insets top="100.0"/>
+            </VBox.margin>
+         </Label>
+         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="100.0" text="Password:"
+                textAlignment="CENTER"/>
+      </VBox>
+      <VBox layoutX="98.0" layoutY="1.0" prefHeight="200.0" prefWidth="100.0">
+         <TextField>
+            <opaqueInsets>
+               <Insets/>
+            </opaqueInsets>
+            <VBox.margin>
+               <Insets top="95.0"/>
+            </VBox.margin>
+         </TextField>
+         <PasswordField>
+            <VBox.margin>
+               <Insets top="10.0"/>
+            </VBox.margin>
+         </PasswordField>
+      </VBox>
+   </Pane>
 </VBox>
