--- a/src/main/resources/nielson/c195projectmkn/loginform.fxml
+++ b/src/main/resources/nielson/c195projectmkn/loginform.fxml
@@ -4,36 +4,34 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" prefHeight="250.0" prefWidth="300.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="nielson.c195projectmkn.Controllers.LogInFormController">
+<VBox alignment="CENTER" prefHeight="250.0" prefWidth="300.0" spacing="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nielson.c195projectmkn.Controllers.LogInFormController">
    <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
    <Pane prefHeight="200.0" prefWidth="200.0">
-      <VBox layoutX="14.0" prefHeight="200.0" prefWidth="100.0">
-         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="10.0" prefWidth="100.0" text="Username:"
-                textAlignment="CENTER">
+      <VBox layoutX="14.0" prefHeight="160.0" prefWidth="100.0">
+         <Label fx:id="userNameLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="10.0" prefWidth="100.0" text="Username:" textAlignment="CENTER">
             <VBox.margin>
-               <Insets top="100.0"/>
+               <Insets top="100.0" />
             </VBox.margin>
          </Label>
-         <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="100.0" text="Password:"
-                textAlignment="CENTER"/>
+         <Label fx:id="passwordLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="100.0" text="Password:" textAlignment="CENTER" />
       </VBox>
-      <VBox layoutX="98.0" layoutY="1.0" prefHeight="200.0" prefWidth="100.0">
-         <TextField>
+      <VBox layoutX="114.0" prefHeight="160.0" prefWidth="100.0">
+         <TextField fx:id="userNameTextField">
             <opaqueInsets>
-               <Insets/>
+               <Insets />
             </opaqueInsets>
             <VBox.margin>
-               <Insets top="95.0"/>
+               <Insets top="95.0" />
             </VBox.margin>
          </TextField>
-         <PasswordField>
+         <PasswordField fx:id="passWordTextField">
             <VBox.margin>
-               <Insets top="10.0"/>
+               <Insets top="10.0" />
             </VBox.margin>
          </PasswordField>
       </VBox>
+      <Label fx:id="locationDisplayLabel" layoutX="12.0" layoutY="178.0" text="Display Country Here." />
    </Pane>
 </VBox>
