--- a/src/main/resources/nielson/c195projectmkn/loginform.fxml
+++ b/src/main/resources/nielson/c195projectmkn/loginform.fxml
@@ -33,5 +33,6 @@
          </PasswordField>
       </VBox>
       <Label fx:id="locationDisplayLabel" layoutX="12.0" layoutY="178.0" text="Display Country Here." />
+      <Button fx:id="logInButton" layoutX="185.0" layoutY="174.0" mnemonicParsing="false" onAction="#OnClickLogIn" text="Log In" />
    </Pane>
 </VBox>
