--- a/src/main/resources/nielson/c195projectmkn/LogInForm.fxml
+++ b/src/main/resources/nielson/c195projectmkn/LogInForm.fxml
@@ -15,15 +15,18 @@
                <Insets top="100.0" />
             </VBox.margin>
          </Label>
-         <Label fx:id="passwordLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="100.0" text="Password:" textAlignment="CENTER" />
+         <Label fx:id="passwordLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="100.0" text="Password:" textAlignment="CENTER">
+            <VBox.margin>
+               <Insets top="10.0" />
+            </VBox.margin></Label>
       </VBox>
-      <VBox layoutX="114.0" prefHeight="160.0" prefWidth="100.0">
+      <VBox layoutX="114.0" prefHeight="167.0" prefWidth="144.0">
          <TextField fx:id="userNameTextField">
             <opaqueInsets>
                <Insets />
             </opaqueInsets>
             <VBox.margin>
-               <Insets top="95.0" />
+               <Insets top="97.0" />
             </VBox.margin>
          </TextField>
          <PasswordField fx:id="passWordTextField">
@@ -34,5 +37,6 @@
       </VBox>
       <Label fx:id="locationDisplayLabel" layoutX="12.0" layoutY="178.0" text="Display Country Here." />
       <Button fx:id="logInButton" layoutX="185.0" layoutY="174.0" mnemonicParsing="false" onAction="#OnClickLogIn" text="Log In" />
+      <Label fx:id="LogInErrorDisplayLabel" layoutX="10.0" layoutY="50.0" textFill="#b20000" />
    </Pane>
 </VBox>
