--- a/src/main/resources/nielson/c195projectmkn/CustomerRecord.fxml
+++ b/src/main/resources/nielson/c195projectmkn/CustomerRecord.fxml
@@ -9,14 +9,15 @@
     <TableView fx:id="customersTable" layoutX="45.0" layoutY="109.0" prefHeight="375.0" prefWidth="900.0">
         <columns>
             <TableColumn fx:id="customerIdColumn" minWidth="20.0" prefWidth="20.0" text="ID" />
-            <TableColumn fx:id="customerNameColumn" minWidth="200.0" prefWidth="200.0" text="Name" />
-            <TableColumn fx:id="customerAddressColumn" minWidth="200.0" prefWidth="200.0" text="Address" />
-            <TableColumn fx:id="customerPostalCodeColumn" minWidth="75.0" prefWidth="75.0" text="Postal Code" />
-            <TableColumn fx:id="customerPhoneColumn" minWidth="80.0" prefWidth="100.0" text="Phone Number" />
-            <TableColumn fx:id="customerCreateDateColumn" minWidth="60.0" text="Create Date" />
+            <TableColumn fx:id="customerNameColumn" minWidth="117.0" prefWidth="119.0" text="Name" />
+            <TableColumn fx:id="customerAddressColumn" minWidth="154.0" prefWidth="182.0" text="Address" />
+            <TableColumn fx:id="customerPostalCodeColumn" minWidth="70.0" prefWidth="77.0" text="Postal Code" />
+            <TableColumn fx:id="customerPhoneColumn" minWidth="80.0" prefWidth="95.0" text="Phone Number" />
+            <TableColumn fx:id="customerCreateDateColumn" minWidth="60.0" prefWidth="75.0" text="Create Date" />
             <TableColumn fx:id="customerCreatedByColumn" prefWidth="70.0" text="Created By" />
-            <TableColumn fx:id="customerLastUpdatedColumn" prefWidth="82.0" text="Last Update" />
-            <TableColumn fx:id="customerDivisionColumn" prefWidth="71.0" text="Division" />
+            <TableColumn fx:id="customerLastUpdatedColumn" prefWidth="81.0" text="Last Updated" />
+            <TableColumn fx:id="customerLastUpdatedByColumn" prefWidth="103.0" text="Last Updated By" />
+         <TableColumn fx:id="customerDivisionColumn" prefWidth="77.0" text="Division ID" />
         </columns>
     </TableView>
     <TextField fx:id="customerTableSearchBar" layoutX="122.0" layoutY="77.0" onKeyTyped="#OnKeyTypedSearchForCustomerByIDorString" promptText="Search by Name or ID" />
