--- a/src/main/resources/nielson/c195projectmkn/EditCustomerForm.fxml
+++ b/src/main/resources/nielson/c195projectmkn/EditCustomerForm.fxml
@@ -32,6 +32,12 @@
                 <Insets />
             </VBox.margin>
         </TextField>
+        <ComboBox fx:id="customerDivisionComboBox1" layoutX="10.0" layoutY="212.0" prefHeight="25.0" prefWidth="100.0" />
+        <ComboBox fx:id="customerDivisionComboBox2" layoutX="10.0" layoutY="110.0" prefHeight="25.0" prefWidth="100.0">
+            <VBox.margin>
+                <Insets />
+            </VBox.margin>
+        </ComboBox>
         <TextField fx:id="customerPhoneTextField" layoutX="10.0" layoutY="110.0" prefHeight="25.0">
             <VBox.margin>
                 <Insets />
@@ -39,13 +45,7 @@
         </TextField>
         <TextField fx:id="createDateTextField" layoutX="10.0" layoutY="112.0" prefHeight="25.0" />
         <TextField fx:id="createdByTextField" layoutX="10.0" layoutY="112.0" prefHeight="25.0" />
-        <TextField fx:id="lastUpdatedTextField" layoutX="10.0" layoutY="112.0" prefHeight="25.0" />
-        <ComboBox fx:id="customerDivisionComboBox1" layoutX="10.0" layoutY="212.0" prefHeight="25.0" prefWidth="100.0" />
-        <ComboBox fx:id="customerDivisionComboBox2" layoutX="10.0" layoutY="110.0" prefHeight="25.0" prefWidth="100.0">
-            <VBox.margin>
-                <Insets bottom="20.0" />
-            </VBox.margin>
-        </ComboBox>
+        <TextField fx:id="lastUpdatedOnTextField" layoutX="10.0" layoutY="112.0" prefHeight="25.0" />
     </VBox>
     <VBox layoutX="25.0" layoutY="160.0" prefHeight="250.0" prefWidth="118.0">
         <Label alignment="CENTER_RIGHT" prefHeight="20.0" prefWidth="141.0" text="ID:">
@@ -68,9 +68,14 @@
                 <Insets top="5.0" />
             </VBox.margin>
         </Label>
+        <Label alignment="CENTER_RIGHT" layoutX="10.0" layoutY="57.0" prefHeight="20.0" prefWidth="126.0" text="Division:">
+            <VBox.margin>
+                <Insets top="15.0" />
+            </VBox.margin>
+        </Label>
         <Label alignment="CENTER_RIGHT" layoutX="10.0" layoutY="61.0" prefHeight="20.0" prefWidth="126.0" text="Phone:">
             <VBox.margin>
-                <Insets top="5.0" />
+                <Insets top="20.0" />
             </VBox.margin>
         </Label>
         <Label alignment="CENTER_RIGHT" layoutX="10.0" layoutY="57.0" prefHeight="20.0" prefWidth="121.0" text="Create Date:">
@@ -86,11 +91,6 @@
         <Label alignment="CENTER_RIGHT" layoutX="10.0" layoutY="57.0" prefHeight="20.0" prefWidth="119.0" text="Last Updated On:">
             <VBox.margin>
                 <Insets top="5.0" />
-            </VBox.margin>
-        </Label>
-        <Label alignment="CENTER_RIGHT" layoutX="10.0" layoutY="57.0" prefHeight="20.0" prefWidth="126.0" text="Division:">
-            <VBox.margin>
-                <Insets top="15.0" />
             </VBox.margin>
         </Label>
     </VBox>
