Finished first attempt of project. Will turn in. Looks good! :)

--- a/src/main/resources/nielson/c195projectmkn/CustomerRecord.fxml
+++ b/src/main/resources/nielson/c195projectmkn/CustomerRecord.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<Pane fx:id="CustomerRecordPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000" prefWidth="1000" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nielson.c195projectmkn.Controllers.CustomerRecordController">
-    <TableView fx:id="customersTable" layoutX="45.0" layoutY="109.0" prefHeight="375.0" prefWidth="900.0">
+<Pane fx:id="CustomerRecordPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000" prefWidth="1200" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nielson.c195projectmkn.Controllers.CustomerRecordController">
+    <TableView fx:id="customersTable" layoutX="45.0" layoutY="109.0" prefHeight="375.0" prefWidth="1000.0">
         <columns>
             <TableColumn fx:id="customerIdColumn" minWidth="20.0" prefWidth="20.0" text="ID" />
             <TableColumn fx:id="customerNameColumn" minWidth="117.0" prefWidth="119.0" text="Name" />
@@ -66,7 +66,7 @@
         </font>
     </Label>
     <Button fx:id="exitButton" layoutX="951.0" layoutY="962.0" mnemonicParsing="false" onAction="#OnClickExitProgram" text="Exit" />
-    <TableView fx:id="appointmentsTable" layoutX="45.0" layoutY="560.0" prefHeight="375.0" prefWidth="900.0">
+    <TableView fx:id="appointmentsTable" layoutX="45.0" layoutY="560.0" prefHeight="375.0" prefWidth="1000.0">
         <columns>
             <TableColumn fx:id="idColumn" minWidth="20.0" prefWidth="20.0" text="ID" />
             <TableColumn fx:id="titleColumn" prefWidth="134.0" text="Title" />
@@ -93,4 +93,5 @@
    <Label layoutX="153.0" layoutY="500.0" text="Organize Appointments By:" />
    <RadioButton fx:id="allRadioButton" layoutX="287.0" layoutY="522.0" mnemonicParsing="false" onAction="#OnClickShowAllAppointments" text="All" toggleGroup="$OrganizeType" />
    <Button fx:id="goToReportsButton" layoutX="278.0" layoutY="944.0" mnemonicParsing="false" onAction="#OnClickOpenReportsForm" prefHeight="25.0" prefWidth="131.0" text="View Reports" />
+   <Button fx:id="logOutButton" layoutX="1001.0" layoutY="962.0" mnemonicParsing="false" onAction="#OnClickLogOut" prefHeight="25.0" prefWidth="88.0" text="Log Out" />
 </Pane>
